--- a/src/Components/HomePage/Homepage.css
+++ b/src/Components/HomePage/Homepage.css
@@ -98,24 +98,36 @@
   .bottom-box{
   
     width: 100%;
-    height: 30vh;
+    height: 25vh;
     background-color:rgb(0,144,128) ;
     border-radius: 8px;
+    display: flex;
+    
   }
   .box{
     width: 33%;
-    height: 30vh;
-    background-color: purple;
+    height: auto;
+    /* background-color: purple; */
     display: flex;
+    flex-wrap: wrap;
+    
   }
   .box-icon{
     width: 25%;
-    height: 30vh;
+    height: auto;
     /* background-color: saddlebrown; */
   }
   .box-details{
-    width: 70%;
-    height: 30vh;
+    width: 75%;
+    height: auto;
     /* background-color: aqua; */
   }
-  
+  #box-heading{
+    font-size: 1.2rem;
+
+  }
+  #box-detail{
+    font-size: 0.6rem;
+    color: rgba(255, 255, 255, 0.822);
+  }
+
