--- a/src/Components/HomePage/GrowingBuisness/GrowingBuisness.css
+++ b/src/Components/HomePage/GrowingBuisness/GrowingBuisness.css
@@ -48,21 +48,21 @@
 }
 
 .Sec3-btn {
-  height: 35%;
+  height: 100%;
   width: 100%;
   padding-top: 4%;
   /* background-color: rebeccapurple; */
   display: flex;
 }
-#Sec3-btn {
-  width: 30%;
-  height: 7vh;
-  cursor: pointer;
-  background-color: rgb(248, 90, 64);
-  border: none;
-  border-radius: 4px;
-  color: white;
-}
+/* #Sec3-btn {
+    width: 30%;
+    height: 7vh;
+    cursor: pointer;
+    background-color: rgb(248, 90, 64);
+    border: none;
+    border-radius: 4px;
+    color: white;
+  } */
 
 .Sec3-imgBox {
   height: 60%;
@@ -87,10 +87,19 @@
 }
 .info-category-icon {
   width: 20%;
-  height: 100%;
+  height: 10vh;
   /* background-color: lime; */
   text-align: center;
-  font-size: 0.5rem;
+  color: rgb(0, 131, 116);
+  /* font-size: 0.5rem; */
+}
+.info-icon {
+  width: 100%;
+  height: 100%;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .info-category-text {
   width: 70%;
