--- a/src/Components/HomePage/Lets Grow/LetsGrow.css
+++ b/src/Components/HomePage/Lets Grow/LetsGrow.css
@@ -106,27 +106,26 @@
   width: 25%;
   height: 50%;
   /* background-color: saddlebrown; */
-  /* display: flex;
+  display: flex;
   align-items: center;
-  justify-content: flex-end; */
- 
+  justify-content: end;
 }
-#sub-box-icon{
-    width: fit-content;
-    height: fit-content;
-    /* background-color: green; */
-
-}
-#sub-box-icon i{
-    width: 50vh;
+#box-icon {
+  width: 100%;
+  height: 100%;
+  /* background-color: green; */
 }
 
+/* #sub-box-icon i{
+    width: 100%;
+    height: 100%;
+    background-color: red;
+} */
 
 .box-details {
   width: 70%;
   height: auto;
   /* background-color: aqua; */
-  
 }
 #box-heading {
   font-size: 1.3rem;
