--- a/src/Components/HomePage/WhyChooseUs/WhyChooseUs.css
+++ b/src/Components/HomePage/WhyChooseUs/WhyChooseUs.css
@@ -50,6 +50,15 @@
   /* background-color: red; */
   text-align: center;
 }
+.sub-sub-box-icon{
+  height: 50%;
+  width: 100%;
+  color: rgb(0,131,116);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: black; */
+}
 .sub-box-text {
   width: 80%;
   height: 100%;
