--- a/src/Components/HomePage/BlogPost/BlogPost.css
+++ b/src/Components/HomePage/BlogPost/BlogPost.css
@@ -9,7 +9,7 @@
   
   .container-BlogPost {
     width: 75%;
-    height: 40rem;
+    height: 60rem;
     /* background-color:black ; */
     color: black;
     padding-top: 5%;
@@ -35,13 +35,14 @@
 
   #BlogPost-heading{
     width: 55%;
-    font-size: 1.8rem;
+    font-size: 2rem;
     text-align: center;
+    font-weight: bold;
     /* background-color: aqua; */
   }
   #Blogpost-text{
     width: 55%;
-    font-size: 0.7rem;
+    font-size: 1rem;
     color: rgb(118, 109, 109);
     text-align: center;
     /* background-color: aquamarine; */
@@ -56,7 +57,7 @@
   .BlogPost-Links{
     height: 75%;
     width: 100%;
-    /* background-color: rgb(112, 112, 66); */
+    /* background-color: rgb(236, 236, 51); */
     display: flex;
     justify-content: space-between;
   }
@@ -72,10 +73,11 @@
   }
 
   .Blogpost-linkcard-image{
-    height: 55%;
-    width: 80%;
+    height: auto;
+    width: 100%;
     /* background-color: aqua; */
   }
+  
   .Blogpost-linkcard-image img{
     width: 100%;
     height: 95%;
